# trying-mio-capnproto

./: .gitignore  Cargo.toml  LICENSE  build.rs
client/: Cargo.toml  build.rs
client/src/: main.rs
schema/: point.capnp
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
