[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.18.1"

[build-dependencies]
capnpc = "0.18.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'
opt-level = "z"

[build.release]
rustflags = ["-C", "target-cpu=native"]