[workspace]
members = [
    "server",
    "client"
]
name = "echo"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
strip = true
lto = true
codegen-units = 1

[build.release]
rustflags = ["-C", "target-cpu=native"]